--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <body>
         <h1>Minha página inicial</h1>
         <h2>teste de status e commit</h2>
+        <h3>Teste de inclusao e commit</h3>
     </body>
 </html>
